samples/_failures_safe/1761178289_7ea921_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75ce6261.c: In function ‘main’:
./samples/SAFE/__tmp_75ce6261.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
